attempt to fix input shift by adding &nbsp; to html

--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ input[type="text"] {
     font-family: inherit;
     font-size: inherit;
     outline: none;
-    margin-left: 6.75px;
     margin-bottom: 1px;
 
     caret-color: var(--text-main);
